# NICA-Pro

./: .dockerignore  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  docker-compose.dev.yml  start-dev.sh
backend/: __init__.py  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/coach/: __init__.py  rules.py
backend/app/agents/nlp/: __init__.py  food_db.json  parser.py
backend/app/api/: deps.py  goals.py  meals.py  summary.py  users.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  goals.py  meals.py  summary.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 20240601_0001_initial_domain.py
backend/src/agents/: base.py  calc.py  coach.py  dashboard_agent.py  nlp_agent.py  planner.py  substitution.py  trend.py  ui.py
backend/src/api/: router.py  schemas.py  security.py
backend/src/app/: main.py
backend/src/components/: cards.py  dashboard.py
backend/src/core/: cache.py  constants.py  logging.py  models.py  orchestrator.py  serialization.py  telemetry.py  tracing.py  validation.py
backend/src/database/: __init__.py  cli.py  memory.py  models.py  postgres.py  seeds.py
backend/src/domain/: entities.py  repositories.py
backend/src/nica_pro_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/opentelemetry/: __init__.py
backend/src/opentelemetry/trace/: __init__.py
backend/src/services/: charting.py  event_bus.py  normalization.py  nutrition.py  realtime.py  security.py
backend/tests/: conftest.py  test_agents_pipeline.py  test_api_and_repository.py  test_cache.py  test_event_bus.py  test_migrations_and_health.py  test_nlp_agent.py  test_validation.py
(+171 files in other folders)
