[project]
name = "nica-pro-backend"
version = "0.1.0"
description = "FastAPI backend for NICA-Pro"
readme = "README.md"
authors = [{name = "NICA-Pro Team"}]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
